<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:elevation="4dp"
    android:background="@drawable/bg_curved"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="4dp"

    >
<de.hdodenhof.circleimageview.CircleImageView
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:id="@+id/imageViewAccount"
    android:src="@drawable/ic_baseline_account_circle_24"
    android:tint="@color/colorPrimary"
    />
    <TextView
        android:layout_alignParentTop="true"
        android:id="@+id/message_user"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:text="@string/user"
        android:layout_marginStart="8dp"
        android:textColor="@color/colorAccentLight"
        android:layout_toEndOf="@id/imageViewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.google.android.material.button.MaterialButton
        android:layout_alignParentTop="true"
        android:id="@+id/reply"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/reply"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentEnd="true"
        app:iconTint="@color/colorGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_alignParentBottom="@+id/message_user"
        android:layout_alignParentEnd="true"
        android:id="@+id/message_time"
        android:layout_width="wrap_content"
        android:text="@string/date"
        android:visibility="gone"
        android:layout_height="wrap_content" />

    <TextView

        android:layout_marginTop="4dp"
        android:layout_below="@id/message_user"
        android:id="@+id/message_text"
        android:text="@string/this_is_your_question"
        android:layout_toEndOf="@id/imageViewAccount"
        android:layout_toStartOf="@id/reply"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
<ListView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/message_text"
    android:layout_marginTop="8dp"
    android:dividerHeight="0.5dp"
    android:divider="@color/colorGreen"
    android:id="@+id/lst_replies"
    android:visibility="gone"
    />
</RelativeLayout>