<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:elevation="4dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="4dp"

    >
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@id/message_user"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        android:scaleType="centerCrop"
        android:layout_toEndOf="@id/imageViewAccount"
        android:layout_marginStart="4dp"

        />
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imageViewAccount"
        android:src="@drawable/ic_baseline_account_circle_24"
        android:tint="@color/colorAccent"
        
        />
    <TextView
        android:layout_alignParentTop="true"
        android:id="@+id/message_user"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:text="@string/user"
        android:layout_marginStart="8dp"
        android:textColor="@color/colorAccent"
        android:layout_toEndOf="@id/imageViewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       />


    <TextView
        android:layout_alignParentBottom="@+id/message_user"
        android:layout_alignParentEnd="true"
        android:id="@+id/message_time"
        android:layout_width="wrap_content"
        android:text="@string/date"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/colorPrimaryLight"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_marginTop="4dp"
        android:layout_below="@id/message_user"
        android:id="@+id/message_text"
        android:text="@string/loading"
        android:layout_toEndOf="@id/imageViewAccount"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />
<View
    android:layout_width="match_parent"
    android:layout_height="0.5dp"
    android:background="@color/dark_grey"
    android:layout_below="@id/message_text"
    android:layout_marginTop="4dp"
    android:layout_toEndOf="@id/imageViewAccount"
    android:id="@+id/viewDivider"
    />
</RelativeLayout>