<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignupActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_gravity="right|top"
        android:visibility="visible"
        android:indeterminate="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        >
        

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"

            >

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                style="@style/Widget.AppCompat.EditText"
                android:maxLines="1"
                android:singleLine="true"



                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            app:passwordToggleEnabled="true"
            >

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                style="@style/Widget.AppCompat.EditText"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/username"
                android:imeOptions="actionUnspecified"
                android:inputType="textPersonName"

                android:maxLines="1"
                android:singleLine="true"
                style="@style/Widget.AppCompat.EditText"
                />

        </com.google.android.material.textfield.TextInputLayout>
       <RadioGroup
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingLeft="16dp"
           android:paddingRight="16dp"
           android:paddingTop="8dp"
           android:paddingBottom="8dp"
           android:id="@+id/radiogroup"
           >
           <com.google.android.material.textview.MaterialTextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Are you a last shelter game player ?"
               />
           <com.google.android.material.radiobutton.MaterialRadioButton
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Yes"
               android:id="@+id/yesRadio"
               />
           <com.google.android.material.radiobutton.MaterialRadioButton
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="No"
               android:id="@+id/noRadio"
               />

       </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:id="@+id/stateNumberLayout"
            >

            <EditText
                android:id="@+id/stateNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/statenumber"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="gone"
                style="@style/Widget.AppCompat.EditText"

                />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/sign_up_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            
            android:padding="12dp"
            android:text="@string/action_sign_in_short"
            />


        <!-- Link to Login Screen -->


    </LinearLayout>


    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_link_to_login"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="bottom"
        android:padding="12dp"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>